[package]
name = "bevy_road_crossing"
version = "0.1.0"
edition = "2021"


[dependencies]
bevy = { version = "0.8.0", features = ["dynamic"] }
bevy_asset_loader = "0.12.1"


# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3